[gd_scene load_steps=9 format=3 uid="uid://b454mlw8lfllt"]

[ext_resource type="Script" path="res://Characters/enemies/Shooter/ground_enemy.gd" id="1_6sowj"]

[sub_resource type="SphereShape3D" id="SphereShape3D_s5bn4"]
radius = 9.96004

[sub_resource type="SphereShape3D" id="SphereShape3D_kc0hu"]
radius = 14.2913

[sub_resource type="BoxMesh" id="BoxMesh_g3yed"]

[sub_resource type="BoxShape3D" id="BoxShape3D_gos7r"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oyw5e"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qrlgc"]
material = SubResource("StandardMaterial3D_oyw5e")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_isvof"]

[node name="GroundEnemy" type="CharacterBody3D"]
script = ExtResource("1_6sowj")

[node name="ShootingArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ShootingArea"]
shape = SubResource("SphereShape3D_s5bn4")

[node name="TrackingArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="TrackingArea"]
shape = SubResource("SphereShape3D_kc0hu")

[node name="Gun" type="MeshInstance3D" parent="."]
transform = Transform3D(0.282606, 0, 0, 0, 0.197353, 0, 0, 0, 0.572563, 0.506371, 0, -0.082922)
mesh = SubResource("BoxMesh_g3yed")
skeleton = NodePath("../HurtBox/CollisionShape3D")

[node name="HurtBox" type="Area3D" parent="." groups=["enemies"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBox"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
shape = SubResource("BoxShape3D_gos7r")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_qrlgc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_isvof")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[connection signal="body_entered" from="ShootingArea" to="." method="_on_shooting_area_body_entered"]
[connection signal="body_exited" from="ShootingArea" to="." method="_on_shooting_area_body_exited"]
[connection signal="body_entered" from="TrackingArea" to="." method="_on_tracking_area_body_entered"]
[connection signal="body_exited" from="TrackingArea" to="." method="_on_tracking_area_body_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_area_3d_area_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
